# DreamRV

./: CMakeLists.txt  README.md  buildRV32_linux.sh  buildRV32_win.bat
src/: command_parser.c  command_parser.h  debug.c  debug.h  main.c
src/RV32_emu/: RV32_I.c  RV32_I.h  RV32_core.c  RV32_core.h  disassembler.c  disassembler.h  memory.c  memory.h
src/RV32_emu/RV32_extensions/: RV32M.c  RV32M.h
src/user_interfaces/: audio.c  audio.h  gfx.c  gfx.h  input.c  input.h  screen_only.c  screen_only.h  ui.c  ui.h
testPrograms/: soundChannels.s  tetrisMusic.s
